force-app/main/default/objects/Activity/fields/SaleAmount__c.field-meta.xml
<CustomField>
    <fullName>SaleAmount__c</fullName>
    <inlineHelpText>Fill it if you selected the checkbox &quot;Sale&quot;.</inlineHelpText>
    <label>Sale Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>