force-app/main/default/objects/Activity/fields/SendToOneClient__c.field-meta.xml
<CustomField>
    <fullName>SendToOneClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to OneClient</label>
    <type>Checkbox</type>
</CustomField>