force-app/main/default/objects/Activity/fields/SentToOneData__c.field-meta.xml
<CustomField>
    <fullName>SentToOneData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tech field for Wardrobing project. Updated by ETL when record is sent to OneData</description>
    <label>SentToOneData</label>
    <type>Checkbox</type>
</CustomField>