force-app/main/default/objects/Activity/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>Free text think about</description>
    <inlineHelpText>Use it as a reminder.</inlineHelpText>
    <label>Service</label>
    <type>TextArea</type>
</CustomField>