force-app/main/default/objects/Activity/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LV_COM</fullName>
                <default>true</default>
                <label>LV_COM</label>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>ICON_WECOM</fullName>
            </value>
            <value>
                <fullName>MARKETING CLOUD</fullName>
                <label>Marketing Cloud</label>
            </value>
            <value>
                <fullName>WECHAT_DIAMOND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>