force-app/main/default/objects/Activity/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Location</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>