force-app/main/default/objects/Activity/fields/TECH_Appointment_subject_picklist__c.field-meta.xml
<CustomField>
    <fullName>TECH_Appointment_subject_picklist__c</fullName>
    <label>TECH Appointment subject picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Birthday Anniversary</fullName>
                <label>Birthday / Anniversary</label>
            </value>
            <value>
                <fullName>Care Services</fullName>
            </value>
            <value>
                <fullName>In-store Animation</fullName>
            </value>
            <value>
                <fullName>Reservation Pick-up</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
                <label>Return / Exchange</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Homewardrobing</fullName>
            </value>
            <value>
                <fullName>L&apos;Apartment</fullName>
            </value>
            <value>
                <fullName>STD Golden Appoitnment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>