force-app/main/default/objects/Activity/fields/TECH_CTI__c.field-meta.xml
<CustomField>
    <fullName>TECH_CTI__c</fullName>
    <description>[ICONiCS] Check if the Activity is created by the CTI connector</description>
    <formula>IF (
		ISBLANK(cnx__UniqueId__c),
		false,
		true
)</formula>
    <label>CTI</label>
    <type>Checkbox</type>
</CustomField>