force-app/main/default/objects/Activity/fields/TECH_CTI_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_CTI_Agent_ID__c</fullName>
    <description>Field created for PowerBI - stock Agent ID from Task Owner</description>
    <formula>Owner:User.cnx__Agent_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH CTI Agent ID</label>
    <type>Text</type>
</CustomField>