force-app/main/default/objects/Activity/fields/TECH_is_AutoSave__c.field-meta.xml
<CustomField>
    <fullName>TECH_is_AutoSave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Technical field is used to differentiate automatical and manual backup mode in order to bypass banned words when we are in automatical backup mode (when batch and worflows insert or update outreach, exceptional pusrshases, Birthday Reminders, anniversary reminders, etc... )</description>
    <label>is AutoSave</label>
    <type>Checkbox</type>
</CustomField>