force-app/main/default/objects/Activity/fields/TECH_Is_Transaction_Auto_Sync__c.field-meta.xml
<CustomField>
    <fullName>TECH_Is_Transaction_Auto_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Is Transaction Auto Sync</label>
    <type>Checkbox</type>
</CustomField>