force-app/main/default/objects/Activity/fields/TECH_IsWhatIdCase__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsWhatIdCase__c</fullName>
    <description>[ICONiCS] WhatId is a case? Useful for Dream call flow (ETL)</description>
    <formula>IF (
		/* WhatId is a case? */
		BEGINS(WhatId, &quot;500&quot;),
		true,
		false
)</formula>
    <label>TECH_IsWhatIdCase</label>
    <type>Checkbox</type>
</CustomField>