force-app/main/default/objects/Activity/fields/TECH_Owner_is_Active_User__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_is_Active_User__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Owner is Active User</label>
    <type>Checkbox</type>
</CustomField>