force-app/main/default/objects/Activity/fields/TECH_Resolution_Empty__c.field-meta.xml
<CustomField>
    <fullName>TECH_Resolution_Empty__c</fullName>
    <formula>ISPICKVAL( Resolution__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Resolution Empty</label>
    <type>Checkbox</type>
</CustomField>