force-app/main/default/objects/Activity/fields/tech_SentToOneData__c.field-meta.xml
<CustomField>
    <fullName>tech_SentToOneData__c</fullName>
    <label>tech_SentToOneData</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>