force-app/main/default/objects/Activity/fields/techCaStore__c.field-meta.xml
<CustomField>
    <fullName>techCaStore__c</fullName>
    <formula>TEXT(Owner:User.DefaultStore__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>techCaStore</label>
    <type>Text</type>
</CustomField>