force-app/main/default/objects/Activity/fields/To_do_type__c.field-meta.xml
<CustomField>
    <fullName>To_do_type__c</fullName>
    <label>Todo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Care Service</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Xstore Order</fullName>
            </value>
            <value>
                <fullName>NY Order</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>