force-app/main/default/objects/Activity/fields/Todo_Code__c.field-meta.xml
<CustomField>
    <fullName>Todo_Code__c</fullName>
    <label>Todo Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TD_CS_01</fullName>
            </value>
            <value>
                <fullName>TD_CS_02</fullName>
            </value>
            <value>
                <fullName>TD_CS_03</fullName>
            </value>
            <value>
                <fullName>TD_CS_04</fullName>
            </value>
            <value>
                <fullName>TD_NY_01</fullName>
            </value>
            <value>
                <fullName>TD_NY_02</fullName>
            </value>
            <value>
                <fullName>TD_NY_03</fullName>
            </value>
            <value>
                <fullName>TD_NY_04</fullName>
            </value>
            <value>
                <fullName>TD_NY_05</fullName>
            </value>
            <value>
                <fullName>TD_NY_06</fullName>
            </value>
            <value>
                <fullName>TD_REQUEST</fullName>
            </value>
            <value>
                <fullName>TD_VOICE</fullName>
            </value>
            <value>
                <fullName>TD_XSTO_01</fullName>
            </value>
            <value>
                <fullName>TD_XSTO_02</fullName>
            </value>
            <value>
                <fullName>TD_XSTO_03</fullName>
            </value>
            <value>
                <fullName>TD_XSTO_04</fullName>
            </value>
            <value>
                <fullName>TD_XSTO_05</fullName>
            </value>
            <value>
                <fullName>TD_CL_Birthday</fullName>
            </value>
            <value>
                <fullName>TD_CL_RTW_no_buy_2months</fullName>
            </value>
            <value>
                <fullName>TD_CL_SHOES_no_buy_3months</fullName>
            </value>
            <value>
                <fullName>TD_CL_10K_no_buy_45days</fullName>
            </value>
            <value>
                <fullName>TD_CL_10K_no_buy_3months</fullName>
            </value>
            <value>
                <fullName>TD_CL_NEW_sup_2500</fullName>
            </value>
            <value>
                <fullName>TD_CL_EXCP_11months</fullName>
            </value>
            <value>
                <fullName>TD_CS_05</fullName>
            </value>
            <value>
                <fullName>TD_CS_06</fullName>
            </value>
            <value>
                <fullName>TD_CS_07</fullName>
            </value>
            <value>
                <fullName>TD_CS_08</fullName>
            </value>
            <value>
                <fullName>TD_CL_END_ENG_60days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>