force-app/main/default/objects/Activity/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Distant Orders</label>
    <length>60</length>
    <type>Text</type>
</CustomField>