force-app/main/default/objects/Activity/fields/Transaction_Total_Converted_Amount_EUR__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Total_Converted_Amount_EUR__c</fullName>
    <label>Transaction Total Converted Amount EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>