force-app/main/default/objects/Activity/fields/Validity_Date_IW__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date_IW__c</fullName>
    <label>Validity_Date_IW</label>
    <type>Date</type>
</CustomField>