force-app/main/default/objects/Activity/fields/Wechat_OpenId__c.field-meta.xml
<CustomField>
    <fullName>Wechat_OpenId__c</fullName>
    <description>Id of the client from the Mini Program</description>
    <label>Wechat OpenId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>