force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>ActionType__c</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>ACTIVITY.TASK</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
    <language>en_US</language>
</ListView>