force-app/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>ActionType__c</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>ACTIVITY.TASK</columns>
    <filterScope>Delegated</filterScope>
    <label>My Delegated Activities</label>
</ListView>